Added a media query for viewports smaller than 600px at the bottom of style.css. Added css within media query such that the profile picture shrinks to 60% and the font size for the main section shrinks to 12px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,3 +199,15 @@ footer p {
     right: calc(-50% + 31.765px);
     bottom: -20px;
 }
+
+@media (max-width: 600px) {
+    .profilePic {
+        width: calc(.6 * 175px);
+        height: calc(.6 * 233px);
+
+    }
+
+    #mainSection p {
+        font-size: 12px;
+    }
+}
