Added more items to the media query for small screens (under 600px). Made the title box (name logo) span the entire header and kick the nav buttons to the next line. Unfloated nav buttons so they don't stay stuck to the right side of the page when kicked to a new line. Removed unnecessary marin and padding from nav items when kicked. Changed value in .footerFixer to account for change in the height of certain page elements when media query is activated.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,25 @@ footer p {
 
     }
 
+    #titleBox {
+        width: 100%;
+    }
+
+    .nav {
+        float: none;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .nav div {
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .footerFixer {
+        min-height: calc(100vh - 130px);
+    }
+
     #mainSection p {
         font-size: 12px;
     }
