Centered main title box/name in mobile view. Centered nav barin mobile view. Removed most padding and margins. Specified 10px of top and bottom paddding for main title box/name.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,19 +207,29 @@ footer p {
 
     }
 
+    #topPannelOuter {
+        margin: 0;
+        padding: 0;
+    }
+
     #titleBox {
         width: 100%;
+        margin: 0;
+        padding: 10px 0px 10px 0px;
+        text-align: center;
     }
 
     .nav {
         float: none;
         padding: 0px;
         margin: 0px;
+        width: 100%;
     }
 
     .nav div {
         padding: 0px;
-        margin: 0px;
+        margin: 0px auto;
+        text-align: center;
     }
 
     .footerFixer {
