Changed the display and margin properties of .displayBox, inside my media query, such that items on the portfolio page are centered when in mobile view.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,4 +239,9 @@ footer p {
     #mainSection p {
         font-size: 12px;
     }
+
+    .displayBox {
+        display: block;
+        margin: 20px auto;
+    }
 }
