--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,10 +200,10 @@ footer p {
     bottom: -20px;
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     .profilePic {
-        width: calc(.6 * 175px);
-        height: calc(.6 * 233px);
+        width: calc(15vmin * 1.75);
+        height: calc(15vmin * 2.33);
 
     }
 
